--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="wrap">
     <header class="top">
-      <div class="headText">
-        <h1>Ennéagramme</h1>
+      <div>
+        <h1 class="brandTitle">Ennéagramme</h1>
         <p>Clique sur un type pour voir un résumé, puis ouvrir la fiche complète.</p>
       </div>
       <div class="actions">
@@ -20,7 +20,7 @@
     </header>
 
     <main class="grid">
-      <section class="stage" id="diagram">
+      <section class="stage" id="stage">
         <div class="svgWrap">
           <svg id="enneaSvg" viewBox="0 0 700 700" aria-label="Diagramme de l'ennéagramme">
             <defs>
@@ -43,8 +43,9 @@
             <circle class="ring" cx="350" cy="350" r="270"></circle>
             <circle class="innerRing" cx="350" cy="350" r="210"></circle>
 
-            <text x="350" y="352" text-anchor="middle" dominant-baseline="middle" class="centerTitle">
-              ENNÉAGRAMME
+            <text x="350" y="352" text-anchor="middle" dominant-baseline="middle"
+                  class="svgCenterTitle">
+              Ennéagramme
             </text>
 
             <g id="staticBg" class="staticBg">
@@ -111,7 +112,27 @@
             <a id="openFull" class="btn" href="profils/type1.html" aria-disabled="true">Voir la fiche complète</a>
             <a id="openProfil" class="btn" href="test-enneagramme-sans-indice.html">Passer le test</a>
             <a class="btn" href="explore.html">Explorer l'Ennéagramme</a>
-            <a class="btn" href="#diagram">Choisir un profil</a>
+          </div>
+
+          <div class="chooser">
+            <div class="chooserTitle">Choisir un profil</div>
+            <div class="chooserRow">
+              <select id="profilePick" class="chooserSelect" aria-label="Choisir un profil">
+                <option value="">Sélectionne un type…</option>
+                <option value="1">Type 1</option>
+                <option value="2">Type 2</option>
+                <option value="3">Type 3</option>
+                <option value="4">Type 4</option>
+                <option value="5">Type 5</option>
+                <option value="6">Type 6</option>
+                <option value="7">Type 7</option>
+                <option value="8">Type 8</option>
+                <option value="9">Type 9</option>
+              </select>
+
+              <button id="goProfile" type="button" class="chooserBtn" disabled>Ouvrir</button>
+            </div>
+            <div class="chooserHint">Astuce : la sélection te remonte au diagramme et met en évidence le type.</div>
           </div>
         </div>
       </aside>
@@ -128,5 +149,50 @@
   </div>
 
   <script src="assets/js/app.js?v=100"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const pick = document.getElementById("profilePick");
+      const go = document.getElementById("goProfile");
+      const stage = document.getElementById("stage");
+      const nodesLayer = document.getElementById("nodesLayer");
+
+      function clearHints(){
+        if(!nodesLayer) return;
+        nodesLayer.querySelectorAll(".node").forEach(n => n.classList.remove("hint"));
+      }
+
+      function hintType(t){
+        if(!nodesLayer) return;
+        clearHints();
+        const node = nodesLayer.querySelector(`.node[data-type="${t}"]`);
+        if(node) node.classList.add("hint");
+        setTimeout(clearHints, 2200);
+      }
+
+      function scrollToStage(){
+        if(!stage) return;
+        stage.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+
+      pick.addEventListener("change", () => {
+        const t = parseInt(pick.value, 10);
+        const ok = Number.isFinite(t) && t >= 1 && t <= 9;
+        go.disabled = !ok;
+
+        if(!ok) return;
+
+        scrollToStage();
+        if(typeof window.selectType === "function") window.selectType(t);
+        hintType(t);
+      });
+
+      go.addEventListener("click", () => {
+        const t = parseInt(pick.value, 10);
+        if(!(Number.isFinite(t) && t >= 1 && t <= 9)) return;
+        window.location.href = `profils/type${t}.html`;
+      });
+    });
+  </script>
 </body>
 </html>
