--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ennéagramme</title>
-  <link rel="stylesheet" href="assets/css/app.css?v=100" />
-
-  <style>
-    /* Effet “choisir un type” : pulsation douce autour des cercles */
-    @keyframes pulseRing {
-      0%   { transform: scale(1);   filter: drop-shadow(0 0 0 rgba(255,255,255,0)); }
-      50%  { transform: scale(1.06); filter: drop-shadow(0 0 10px rgba(255,255,255,.18)); }
-      100% { transform: scale(1);   filter: drop-shadow(0 0 0 rgba(255,255,255,0)); }
-    }
-    .node.hint circle{
-      animation: pulseRing .95s ease-in-out infinite;
-      stroke-width: 3.2;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/app.css?v=200" />
 </head>
 
 <body>
@@ -89,10 +76,10 @@
 
         <div class="card">
           <div class="miniGrid">
-            <div class="mini"><h3>Centre d'intelligence</h3><p id="center">-</p></div>
-            <div class="mini"><h3>Peur de base</h3><p id="fear">-</p></div>
-            <div class="mini"><h3>Désir de base</h3><p id="desire">-</p></div>
-            <div class="mini"><h3>Compulsion (évitement)</h3><p id="compulsion">-</p></div>
+            <div class="mini"><h3>Centre d'intelligence</h3><p id="center">—</p></div>
+            <div class="mini"><h3>Peur de base</h3><p id="fear">—</p></div>
+            <div class="mini"><h3>Désir de base</h3><p id="desire">—</p></div>
+            <div class="mini"><h3>Compulsion (évitement)</h3><p id="compulsion">—</p></div>
           </div>
 
           <div class="moveLines">
@@ -102,10 +89,10 @@
                 <strong>Intégration</strong>
                 <span class="muted">(santé)</span>
                 <span class="muted"> > </span>
-                <strong id="toIntegr">-</strong>
+                <strong id="toIntegr">—</strong>
                 <span class="muted">:</span>
               </div>
-              <div class="moveBody" id="moveHealthText">-</div>
+              <div class="moveBody" id="moveHealthText">—</div>
             </div>
 
             <div id="moveStress" class="moveLine">
@@ -114,10 +101,10 @@
                 <strong>Désintégration</strong>
                 <span class="muted">(stress)</span>
                 <span class="muted"> > </span>
-                <strong id="toDisint">-</strong>
+                <strong id="toDisint">—</strong>
                 <span class="muted">:</span>
               </div>
-              <div class="moveBody" id="moveStressText">-</div>
+              <div class="moveBody" id="moveStressText">—</div>
             </div>
           </div>
 
@@ -141,6 +128,6 @@
     </footer>
   </div>
 
-  <script src="assets/js/app.js?v=100"></script>
+  <script src="assets/js/app.js?v=200"></script>
 </body>
 </html>
