--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -320,7 +320,7 @@
     <div class="bottomInner">
       <button id="btnCalc2" class="ok" type="button">Calculer</button>
       <button id="btnReset2" class="danger" type="button">Réinitialiser</button>
-      <a id="btnBack" class="linkBtn mutedBtn" href="explore.html">Retour</a>
+      <a id="btnBack" class="linkBtn mutedBtn" href="explore.html">Accueil</a>
     </div>
   </div>
 
