--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <a id="openFull" class="btn" href="profils/type1.html" aria-disabled="true">Voir la fiche complète</a>
             <a id="openProfil" class="btn" href="test-enneagramme-sans-indice.html">Passer le test</a>
             <a class="btn" href="explore.html">Explorer l'Ennéagramme</a>
-            <button id="btnChooseProfiles" class="btn" type="button">Choisir les profils</button>
+            <button id="btnChooseProfiles" class="btn" type="button">Choisir un profil</button>
           </div>
         </div>
       </aside>
