--- a/explore.html
+++ b/explore.html
@@ -43,7 +43,7 @@
 <body>
   <div class="wrap typeWrap">
     <header class="typeTop">
-      <a class="backBtn" href="index.html">Retour</a>
+      <a class="backBtn" href="index.html">Accueil</a>
 
       <div class="typeHead">
         <h1 id="exploreTitle">Explorer l’Ennéagramme</h1>
