--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -19,6 +19,31 @@
       --radius:18px;
     }
     *{box-sizing:border-box}
+
+    /* Progression (discrète) */
+    .scrollProg{
+      position:fixed;
+      left:0; top:0;
+      width:100%;
+      height:3px;
+      z-index:1000;
+      pointer-events:none;
+      opacity:.10;                 /* très discret par défaut */
+      transition: opacity .18s ease;
+    }
+    .scrollProg.on{ opacity:.55; } /* visible uniquement pendant le scroll */
+    .scrollProgTrack{
+      width:100%;
+      height:100%;
+      background: rgba(255,255,255,.06);
+    }
+    .scrollProgFill{
+      width:0%;
+      height:100%;
+      background: linear-gradient(90deg, rgba(139,211,255,.75), rgba(159,242,177,.55));
+      border-radius: 0 999px 999px 0;
+    }
+
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
@@ -243,6 +268,12 @@
   </style>
 </head>
 <body>
+  <div class="scrollProg" id="scrollProg" aria-hidden="true">
+    <div class="scrollProgTrack">
+      <div class="scrollProgFill" id="scrollProgFill"></div>
+    </div>
+  </div>
+
   <div class="wrap">
     <header>
       <div>
@@ -390,6 +421,9 @@
     const btnCalc2 = document.getElementById("btnCalc2");
     const btnReset2 = document.getElementById("btnReset2");
     const btnBack = document.getElementById("btnBack");
+
+    const scrollProg = document.getElementById("scrollProg");
+    const scrollProgFill = document.getElementById("scrollProgFill");
 
     function goProfile(t){
       location.href = PROFILE_PREFIX + t + ".html";
@@ -594,6 +628,24 @@
       resultBox.style.display = "block";
     }
 
+    function updateScrollProgress(){
+      const doc = document.documentElement;
+      const scrollTop = doc.scrollTop || document.body.scrollTop || 0;
+      const scrollHeight = (doc.scrollHeight || document.body.scrollHeight || 0) - doc.clientHeight;
+      const pct = scrollHeight > 0 ? (scrollTop / scrollHeight) * 100 : 0;
+      scrollProgFill.style.width = Math.max(0, Math.min(100, pct)) + "%";
+    }
+
+    let spTimer = null;
+    window.addEventListener("scroll", () => {
+      updateScrollProgress();
+      scrollProg.classList.add("on");
+      clearTimeout(spTimer);
+      spTimer = setTimeout(()=> scrollProg.classList.remove("on"), 260);
+    }, {passive:true});
+
+    window.addEventListener("resize", updateScrollProgress);
+
     if(btnCalc) btnCalc.addEventListener("click", () => {
       renderResults();
       showToast("Résultats calculés");
@@ -607,6 +659,7 @@
       resultBox.style.display = "none";
       resultBody.style.display = "block";
       showToast("Réinitialisé");
+      updateScrollProgress();
     });
 
     if(btnExport) btnExport.addEventListener("click", () => {
@@ -646,6 +699,8 @@
     if(answeredCount >= ITEMS.length){
       renderResults();
     }
+
+    updateScrollProgress();
   })();
   </script>
 </body>
