--- a/test-enneagramme-sans-indice.html
+++ b/test-enneagramme-sans-indice.html
@@ -20,28 +20,30 @@
     }
     *{box-sizing:border-box}
 
-    /* Progression (discrète) */
+    /* Progression (plus visible) */
     .scrollProg{
       position:fixed;
       left:0; top:0;
       width:100%;
-      height:3px;
+      height:6px;                 /* + épais */
       z-index:1000;
       pointer-events:none;
-      opacity:.10;                 /* très discret par défaut */
-      transition: opacity .18s ease;
+      opacity:.85;                /* visible tout le temps */
+      background: rgba(0,0,0,.18);
+      backdrop-filter: blur(6px);
     }
-    .scrollProg.on{ opacity:.55; } /* visible uniquement pendant le scroll */
     .scrollProgTrack{
       width:100%;
       height:100%;
-      background: rgba(255,255,255,.06);
+      background: rgba(255,255,255,.10);
     }
     .scrollProgFill{
       width:0%;
       height:100%;
-      background: linear-gradient(90deg, rgba(139,211,255,.75), rgba(159,242,177,.55));
+      background: linear-gradient(90deg, rgba(139,211,255,.95), rgba(159,242,177,.85));
+      box-shadow: 0 0 14px rgba(139,211,255,.18);
       border-radius: 0 999px 999px 0;
+      transition: width .06s linear;
     }
 
     body{
@@ -422,7 +424,6 @@
     const btnReset2 = document.getElementById("btnReset2");
     const btnBack = document.getElementById("btnBack");
 
-    const scrollProg = document.getElementById("scrollProg");
     const scrollProgFill = document.getElementById("scrollProgFill");
 
     function goProfile(t){
@@ -636,19 +637,13 @@
       scrollProgFill.style.width = Math.max(0, Math.min(100, pct)) + "%";
     }
 
-    let spTimer = null;
-    window.addEventListener("scroll", () => {
-      updateScrollProgress();
-      scrollProg.classList.add("on");
-      clearTimeout(spTimer);
-      spTimer = setTimeout(()=> scrollProg.classList.remove("on"), 260);
-    }, {passive:true});
-
+    window.addEventListener("scroll", updateScrollProgress, {passive:true});
     window.addEventListener("resize", updateScrollProgress);
 
     if(btnCalc) btnCalc.addEventListener("click", () => {
       renderResults();
       showToast("Résultats calculés");
+      updateScrollProgress();
     });
 
     if(btnReset) btnReset.addEventListener("click", () => {
